--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,8 @@
         <!-- Page Header -->
         <header class="fade-in">
             <h1>My Data Science Journey</h1>
-            <p class="subtitle">Exploring the intersection of data, algorithms, and real-world impact</p>
-            <p>A collection of projects showcasing my evolution from data analysis to advanced machine learning applications</p>
+            <p class="subtitle">From Bioinformatics to Data Analysis: Statistical Testing, Risk Modeling & ML Explainability</p>
+            <p>A comprehensive collection showcasing my progression from foundational projects to advanced statistical analysis and business impact</p>
         </header>
 
         <!-- GitHub Stats Section -->
