--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- Navigation Menu -->
         <nav class="nav-menu">
-            <a href="index.html" class="nav-item active">Home</a>
+            <a href="/" class="nav-item active">Home</a>
             <a href="projects.html" class="nav-item">Projects</a>
             <a href="resume.html" class="nav-item">Resume</a>
             <a href="contact.html" class="nav-item">Contact</a>
