--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Adetunji Fasiku | Data Science Portfolio</title>
+    <meta name="description" content="Explore Adetunji Fasiku's data science projects including machine learning models, trading algorithms, and bioinformatics analyses.">
     <link rel="stylesheet" href="styles.css">
+    <script src="analytics.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Georgia:wght@400;700&display=swap" rel="stylesheet">
