--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
     
     <div class="container">
         <!-- Theme Toggle -->
-        <div class="theme-toggle" onclick="toggleTheme()">
+        <button class="theme-toggle" onclick="toggleTheme()" 
+                tabindex="0" 
+                role="button" 
+                aria-label="Toggle dark/light theme"
+                title="Toggle dark/light theme">
             <span class="theme-icon">🌙</span>
-        </div>
+        </button>
         
         <!-- Back to Top Button -->
         <button class="back-to-top" id="backToTop" onclick="scrollToTop()">
