--- a/resume/index.html
+++ b/resume/index.html
@@ -228,9 +228,13 @@
     
     <div class="container">
         <!-- Theme Toggle -->
-        <div class="theme-toggle emoji-fallback" onclick="toggleTheme()">
+        <button class="theme-toggle emoji-fallback" onclick="toggleTheme()" 
+                tabindex="0" 
+                role="button" 
+                aria-label="Toggle dark/light theme"
+                title="Toggle dark/light theme">
             <span class="theme-icon">🌙</span>
-        </div>
+        </button>
         
         <!-- Navigation Menu -->
         <nav class="nav-menu">
