--- a/index.html
+++ b/index.html
@@ -182,114 +182,133 @@
                 </div>
 
                 <div class="project-description">
-                    Analyzed over 130K Billboard Hot 100 entries cross-referenced with Exportify to discover patterns in chart-topping audio features. Applied statistical tests (ANOVA, Tukey HSD, t-tests) and mutual information to isolate key drivers of hit probability. Uncovered seasonal and decade-based feature shifts for music producers and playlist engineers.
+                    <div class="project-section">
+                        <h4>📊 Project Overview</h4>
+                        <p>Comprehensive analysis of over 130,000 Billboard Hot 100 entries cross-referenced with Spotify's Exportify data to discover patterns in chart-topping audio features. This project applies advanced statistical methodologies to isolate key drivers of hit probability and uncover temporal trends in music preferences.</p>
+                    </div>
                 </div>
 
-                <div class="project-highlights">
-                    <h4>Key Achievements</h4>
-                    <ul class="highlight-list">
-                        <li>Analyzed over 130K Billboard Hot 100 entries with audio features</li>
-                        <li>Applied ANOVA, Tukey HSD, and t-tests for statistical validation</li>
-                        <li>Discovered seasonal patterns: winter tracks trend quieter</li>
-                        <li>Identified decade-based shifts: modern hits skew louder and less acoustic</li>
-                        <li>Built visualizations (heatmaps, violin plots, pairplots) for insights</li>
+                <div class="project-section">
+                    <h4>🎯 Key Achievements</h4>
+                    <ul class="achievement-list">
+                        <li><strong>Large-Scale Data Analysis:</strong> Processed and analyzed over 130,000 Billboard Hot 100 entries with corresponding audio features</li>
+                        <li><strong>Statistical Validation:</strong> Applied rigorous statistical tests including ANOVA, Tukey HSD, and t-tests for robust analysis</li>
+                        <li><strong>Seasonal Pattern Discovery:</strong> Identified significant seasonal variations - winter tracks consistently trend quieter across decades</li>
+                        <li><strong>Temporal Trend Analysis:</strong> Documented decade-based shifts showing modern hits skew louder and less acoustic</li>
+                        <li><strong>Advanced Visualizations:</strong> Created comprehensive data visualizations including heatmaps, violin plots, and correlation matrices</li>
+                        <li><strong>Industry Applications:</strong> Delivered actionable insights for music producers and playlist engineers</li>
                     </ul>
                 </div>
 
-                <div class="data-insights">
-                    <h4>Project Scale & Results</h4>
-                    <div class="insight-grid">
-                        <div class="insight-card">
-                            <span class="insight-number">130K+</span>
-                            <span class="insight-label">Billboard Tracks</span>
+                <div class="project-section">
+                    <h4>📈 Project Impact & Scale</h4>
+                    <div class="metrics-grid">
+                        <div class="metric-card">
+                            <span class="metric-number">130K+</span>
+                            <span class="metric-label">Billboard Tracks Analyzed</span>
                         </div>
-                        <div class="insight-card">
-                            <span class="insight-number">ANOVA</span>
-                            <span class="insight-label">Statistical Tests</span>
+                        <div class="metric-card">
+                            <span class="metric-number">70+</span>
+                            <span class="metric-label">Years of Music Data</span>
                         </div>
-                        <div class="insight-card">
-                            <span class="insight-number">Seasonal</span>
-                            <span class="insight-label">Patterns Found</span>
+                        <div class="metric-card">
+                            <span class="metric-number">13</span>
+                            <span class="metric-label">Audio Features Studied</span>
                         </div>
-                        <div class="insight-card">
-                            <span class="insight-number">Decade</span>
-                            <span class="insight-label">Trend Analysis</span>
+                        <div class="metric-card">
+                            <span class="metric-number">4</span>
+                            <span class="metric-label">Statistical Methods Applied</span>
                         </div>
                     </div>
                 </div>
 
-                <div class="tech-stack">
-                    <h4>Technology Stack</h4>
-                    <div class="tech-categories">
-                        <div class="tech-category">
-                            <h5>Core Analysis</h5>
+                <div class="project-section">
+                    <h4>🔬 Statistical Methodology</h4>
+                    <div class="methodology-grid">
+                        <div class="method-card">
+                            <div class="method-title">ANOVA Testing</div>
+                            <div class="method-description">Analysis of Variance to identify statistically significant differences in audio features between hit and non-hit tracks across multiple categorical variables.</div>
+                        </div>
+                        <div class="method-card">
+                            <div class="method-title">Tukey HSD Post-hoc</div>
+                            <div class="method-description">Honest Significant Difference testing for pairwise comparisons to isolate specific feature differences while controlling family-wise error rate.</div>
+                        </div>
+                        <div class="method-card">
+                            <div class="method-title">T-Test Analysis</div>
+                            <div class="method-description">Independent samples t-tests to validate mean differences in continuous audio features between successful and unsuccessful tracks.</div>
+                        </div>
+                        <div class="method-card">
+                            <div class="method-title">Mutual Information</div>
+                            <div class="method-description">Non-parametric method to measure dependencies between audio features and chart success, capturing non-linear relationships.</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-section">
+                    <h4>⚙️ Technology Stack</h4>
+                    <div class="tech-showcase">
+                        <div class="tech-category-card">
+                            <h5>Data Processing & Analysis</h5>
                             <div class="tech-items">
                                 <span class="tech-item">Python</span>
                                 <span class="tech-item">Pandas</span>
+                                <span class="tech-item">NumPy</span>
                                 <span class="tech-item">SciPy</span>
-                                <span class="tech-item">Exportify API</span>
+                                <span class="tech-item">Scikit-learn</span>
                             </div>
                         </div>
-                        <div class="tech-category">
-                            <h5>Statistical Analysis</h5>
+                        <div class="tech-category-card">
+                            <h5>Statistical Testing</h5>
                             <div class="tech-items">
                                 <span class="tech-item">ANOVA</span>
                                 <span class="tech-item">T-Tests</span>
                                 <span class="tech-item">Tukey HSD</span>
                                 <span class="tech-item">Mutual Information</span>
+                                <span class="tech-item">Chi-Square</span>
                             </div>
                         </div>
-                        <div class="tech-category">
-                            <h5>Visualization</h5>
+                        <div class="tech-category-card">
+                            <h5>Data Visualization</h5>
                             <div class="tech-items">
                                 <span class="tech-item">Seaborn</span>
+                                <span class="tech-item">Matplotlib</span>
+                                <span class="tech-item">Plotly</span>
                                 <span class="tech-item">Heatmaps</span>
                                 <span class="tech-item">Violin Plots</span>
-                                <span class="tech-item">Pairplots</span>
                             </div>
                         </div>
-                    </div>
-                </div>
-
-                <div class="algorithm-showcase">
-                    <div class="algorithm-card">
-                        <div class="algorithm-name">ANOVA Testing</div>
-                        <div class="algorithm-purpose">Statistical testing to isolate key drivers of hit probability across audio features</div>
-                    </div>
-                    <div class="algorithm-card">
-                        <div class="algorithm-name">Tukey HSD</div>
-                        <div class="algorithm-purpose">Post-hoc analysis for multiple comparisons in audio feature significance</div>
-                    </div>
-                    <div class="algorithm-card">
-                        <div class="algorithm-name">Mutual Information</div>
-                        <div class="algorithm-purpose">Detecting non-linear relationships between musical features and chart success</div>
-                    </div>
-                    <div class="algorithm-card">
-                        <div class="algorithm-name">Seasonal Analysis</div>
-                        <div class="algorithm-purpose">Uncovering time-based patterns in musical preferences and chart performance</div>
+                        <div class="tech-category-card">
+                            <h5>Data Sources & APIs</h5>
+                            <div class="tech-items">
+                                <span class="tech-item">Spotify API</span>
+                                <span class="tech-item">Exportify</span>
+                                <span class="tech-item">Billboard API</span>
+                                <span class="tech-item">Last.fm API</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
                 <div class="project-timeline">
-                    <h4>Development Timeline</h4>
+                    <h4>🚀 Development Timeline</h4>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 1</div>
+                        <div class="timeline-phase">Milestone 1</div>
                         <div class="timeline-description">Data collection and API integration</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 2</div>
+                        <div class="timeline-phase">Milestone 2</div>
                         <div class="timeline-description">Audio feature analysis and correlation studies</div>
                     </div>
                     <div class="timeline-item current">
-                        <div class="timeline-phase">Phase 3</div>
+                        <div class="timeline-phase">Milestone 3</div>
                         <div class="timeline-description">Genre clustering and pattern recognition</div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-phase">Phase 4</div>
+                        <div class="timeline-phase">Milestone 4</div>
                         <div class="timeline-description">Literary correlation and NLP integration</div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-phase">Phase 5</div>
+                        <div class="timeline-phase">Milestone 5</div>
                         <div class="timeline-description">Recommendation algorithm development</div>
                     </div>
                 </div>
@@ -585,7 +604,7 @@
             .ripple {
                 position: absolute;
                 border-radius: 50%;
-                background: rgba(106, 76, 147, 0.3);
+                background: rgba(114, 92, 173, 0.3);
                 transform: scale(0);
                 animation: ripple-animation 0.6s linear;
                 pointer-events: none;
