--- a/projects.html
+++ b/projects.html
@@ -204,27 +204,27 @@
                 <div class="project-timeline">
                     <h4>🚀 Development Progress</h4>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 1</div>
+                        <div class="timeline-phase">Milestone 1</div>
                         <div class="timeline-description">Data ingestion pipeline with Polygon.io and FRED API integration</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 2</div>
+                        <div class="timeline-phase">Milestone 2</div>
                         <div class="timeline-description">Oracle database schema design and SQLAlchemy ORM implementation</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 3</div>
+                        <div class="timeline-phase">Milestone 3</div>
                         <div class="timeline-description">Technical indicators calculation engine with 113+ TA-Lib indicators</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 4</div>
+                        <div class="timeline-phase">Milestone 4</div>
                         <div class="timeline-description">Data transformation pipeline with cloud storage integration</div>
                     </div>
                     <div class="timeline-item current">
-                        <div class="timeline-phase">Phase 5</div>
+                        <div class="timeline-phase">Milestone 5</div>
                         <div class="timeline-description">Machine learning modeling and trading strategy development (In Progress)</div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-phase">Phase 6</div>
+                        <div class="timeline-phase">Milestone 6</div>
                         <div class="timeline-description">Backtesting framework and risk management system (Planned)</div>
                     </div>
                 </div>
@@ -385,27 +385,27 @@
                 <div class="project-timeline">
                     <h4>🚀 Development Roadmap</h4>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 1</div>
+                        <div class="timeline-phase">Milestone 1</div>
                         <div class="timeline-description">Data collection setup and API integration with Spotify and Billboard</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 2</div>
+                        <div class="timeline-phase">Milestone 2</div>
                         <div class="timeline-description">Audio feature extraction and initial correlation analysis</div>
                     </div>
                     <div class="timeline-item current">
-                        <div class="timeline-phase">Phase 3</div>
+                        <div class="timeline-phase">Milestone 3</div>
                         <div class="timeline-description">Advanced clustering algorithms and genre pattern recognition</div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-phase">Phase 4</div>
+                        <div class="timeline-phase">Milestone 4</div>
                         <div class="timeline-description">Literary correlation analysis and NLP integration</div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-phase">Phase 5</div>
+                        <div class="timeline-phase">Milestone 5</div>
                         <div class="timeline-description">Cross-domain recommendation algorithm development</div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-phase">Phase 6</div>
+                        <div class="timeline-phase">Milestone 6</div>
                         <div class="timeline-description">Web application deployment and user interface</div>
                     </div>
                 </div>
@@ -567,27 +567,27 @@
                 <div class="project-timeline">
                     <h4>🚀 Development Process</h4>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 1</div>
+                        <div class="timeline-phase">Milestone 1</div>
                         <div class="timeline-description">Data exploration and initial assessment of 4M+ customer records</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 2</div>
+                        <div class="timeline-phase">Milestone 2</div>
                         <div class="timeline-description">Comprehensive data cleaning and quality assurance pipeline</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 3</div>
+                        <div class="timeline-phase">Milestone 3</div>
                         <div class="timeline-description">Feature engineering and selection for optimal model performance</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 4</div>
+                        <div class="timeline-phase">Milestone 4</div>
                         <div class="timeline-description">Model development, training, and hyperparameter optimization</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 5</div>
+                        <div class="timeline-phase">Milestone 5</div>
                         <div class="timeline-description">Model evaluation, validation, and performance analysis</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 6</div>
+                        <div class="timeline-phase">Milestone 6</div>
                         <div class="timeline-description">Business insights generation and deployment recommendations</div>
                     </div>
                 </div>
@@ -740,27 +740,27 @@
                 <div class="project-timeline">
                     <h4>📚 Learning Journey</h4>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 1</div>
+                        <div class="timeline-phase">Milestone 1</div>
                         <div class="timeline-description">Completed Andrew Ng's Machine Learning Course foundations</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 2</div>
+                        <div class="timeline-phase">Milestone 2</div>
                         <div class="timeline-description">Mathematical understanding of logistic regression theory</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 3</div>
+                        <div class="timeline-phase">Milestone 3</div>
                         <div class="timeline-description">From-scratch implementation of sigmoid and cost functions</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 4</div>
+                        <div class="timeline-phase">Milestone 4</div>
                         <div class="timeline-description">Manual gradient descent optimization coding</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 5</div>
+                        <div class="timeline-phase">Milestone 5</div>
                         <div class="timeline-description">Custom evaluation metrics implementation and testing</div>
                     </div>
                     <div class="timeline-item completed">
-                        <div class="timeline-phase">Phase 6</div>
+                        <div class="timeline-phase">Milestone 6</div>
                         <div class="timeline-description">Model validation and performance analysis on medical data</div>
                     </div>
                 </div>
