--- a/resume.html
+++ b/resume.html
@@ -128,7 +128,7 @@
         }
         
         .download-btn:hover {
-            background: white;
+            background: var(--lavender);
             transform: translateY(-2px);
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
@@ -156,7 +156,7 @@
         
         @media print {
             body {
-                background: white !important;
+                background: var(--lavender) !important;
                 color: black !important;
             }
             .nav-menu, .download-resume, .print-resume {
@@ -164,7 +164,7 @@
             }
             .resume-container {
                 box-shadow: none !important;
-                background: white !important;
+                background: var(--lavender) !important;
             }
         }
     </style>
