--- a/404.html
+++ b/404.html
@@ -57,14 +57,14 @@
         }
         
         .error-btn:hover {
-            background: var(--pure-white);
+            background: var(--lavender);
             color: var(--royal-purple);
             transform: translateY(-2px);
             box-shadow: var(--medium-shadow);
         }
         
         .error-btn.secondary {
-            background: var(--pure-white);
+            background: var(--lavender);
             color: var(--royal-purple);
             border: 2px solid var(--royal-purple);
         }
