Refactor code structure for improved readability and maintainability

--- a/resume/index.html
+++ b/resume/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume - Adetunji Fasiku</title>
+    <meta name="description" content="Professional resume of Adetunji Fasiku - Data Analyst with expertise in risk modeling, ML explainability, and statistical analysis.">
     <link rel="stylesheet" href="../styles.css">
+    <script src="../enhanced-portfolio.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Georgia:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <!-- jsPDF Library for PDF generation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
         .resume-container {
@@ -257,7 +257,7 @@
                     <span>📍 Parkville, MD</span> | 
                     <span>📧 tunchiiefashh@gmail.com</span> | 
                     <span> linkedin.com/in/adetunji-fasiku</span> | 
-                    <span>🐙 github.com/Tunchiie</span>
+                    <span>github.com/Tunchiie</span>
                 </div>
             </div>
 
