feat: Update navigation links for consistency and enhance theme toggle functionality with improved visibility and animations

--- a/404.html
+++ b/404.html
@@ -95,13 +95,13 @@
                 </p>
                 
                 <div class="error-actions">
-                    <a href="index.html" class="error-btn">Go Home</a>
-                    <a href="projects.html" class="error-btn secondary">View Projects</a>
-                    <a href="contact.html" class="error-btn secondary">Contact Me</a>
+                    <a href="/" class="error-btn">Go Home</a>
+                    <a href="/projects" class="error-btn secondary">View Projects</a>
+                    <a href="/contact" class="error-btn secondary">Contact Me</a>
                 </div>
             
             <div style="margin-top: 3rem; font-size: 0.9rem; color: var(--medium-gray);">
-                <p>If you believe this is an error, please <a href="contact.html" style="color: var(--royal-purple);">let me know</a>!</p>
+                <p>If you believe this is an error, please <a href="/contact" style="color: var(--royal-purple);">let me know</a>!</p>
             </div>
             </div>
         </main>
