--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
     <div class="container">
         <!-- Navigation Menu -->
         <nav class="nav-menu" role="navigation" aria-label="Main navigation">
-            <a href="index.html" class="nav-item active" aria-current="page">Home</a>
-            <a href="projects.html" class="nav-item">Projects</a>
-            <a href="resume.html" class="nav-item">Resume</a>
-            <a href="contact.html" class="nav-item">Contact</a>
+            <a href="/" class="nav-item active" aria-current="page">Home</a>
+            <a href="/projects" class="nav-item">Projects</a>
+            <a href="/resume" class="nav-item">Resume</a>
+            <a href="/contact" class="nav-item">Contact</a>
         </nav>
 
         <main id="main-content">
@@ -459,9 +459,9 @@
             <p>I'm actively seeking data analyst positions where I can apply my analytical skills while continuing to grow toward my data science goals. Let's discuss how I can add value to your team!</p>
             
             <div>
-                <a href="contact.html" class="cta-button">Contact Me</a>
-                <a href="resume.html" class="cta-button">Download Resume</a>
-                <a href="projects.html" class="cta-button">View Portfolio</a>
+                <a href="/contact" class="cta-button">Contact Me</a>
+                <a href="/resume" class="cta-button">Download Resume</a>
+                <a href="/projects" class="cta-button">View Portfolio</a>
             </div>
         </section>
         </main>
