--- a/resume.html
+++ b/resume.html
@@ -188,10 +188,10 @@
     <div class="container">
         <!-- Navigation Menu -->
         <nav class="nav-menu" role="navigation" aria-label="Main navigation">
-            <a href="index.html" class="nav-item">Home</a>
-            <a href="projects.html" class="nav-item">Projects</a>
-            <a href="resume.html" class="nav-item active" aria-current="page">Resume</a>
-            <a href="contact.html" class="nav-item">Contact</a>
+            <a href="/" class="nav-item">Home</a>
+            <a href="/projects" class="nav-item">Projects</a>
+            <a href="/resume" class="nav-item active" aria-current="page">Resume</a>
+            <a href="/contact" class="nav-item">Contact</a>
         </nav>
 
         <main id="main-content">
