feat: Update subtitle to highlight machine learning expertise in profile section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <header class="fade-in">
             <div class="profile-img floating" aria-hidden="true">AF</div>
             <h1>Adetunji Fasiku</h1>
-            <p class="subtitle">Data Analyst | Aspiring Data Scientist</p>
+            <p class="subtitle">Data Analyst with Machine Learning Expertise</p>
             <p>Data Analyst with a Bioinformatics background and hands-on experience in data modeling, risk analysis, and ML explainability. Passionate team player with curiosity and strong communication skills.</p>
             
             <div class="contact-info">
