--- a/contact.html
+++ b/contact.html
@@ -816,6 +816,25 @@ Sent from Adetunji Fasiku's Portfolio Contact Form`;
                 });
             }
 
+            // Listen for theme changes from other pages
+            window.addEventListener('storage', function(e) {
+                if (e.key === 'theme') {
+                    console.log('Theme changed on another page:', e.newValue);
+                    const html = document.documentElement;
+                    const body = document.body;
+                    
+                    if (e.newValue === 'dark') {
+                        html.classList.add('dark-theme');
+                        body.classList.add('dark-theme');
+                    } else {
+                        html.classList.remove('dark-theme');
+                        body.classList.remove('dark-theme');
+                    }
+                    
+                    updateThemeIndicator(e.newValue);
+                }
+            });
+
             // Add back to top functionality
             const backToTop = document.getElementById('back-to-top');
             if (backToTop) {
