--- a/resume.html
+++ b/resume.html
@@ -854,6 +854,27 @@
                 });
             }
 
+            // Listen for theme changes from other pages
+            window.addEventListener('storage', function(e) {
+                if (e.key === 'theme') {
+                    console.log('Theme changed on another page:', e.newValue);
+                    const html = document.documentElement;
+                    const body = document.body;
+                    
+                    // Update data attribute
+                    html.setAttribute('data-theme', e.newValue);
+                    
+                    // Update classes
+                    if (e.newValue === 'dark') {
+                        html.classList.add('dark-theme');
+                        body.classList.add('dark-theme');
+                    } else {
+                        html.classList.remove('dark-theme');
+                        body.classList.remove('dark-theme');
+                    }
+                }
+            });
+
             // Add back to top functionality
             const backToTop = document.getElementById('back-to-top');
             if (backToTop) {
