feat: Add theme status indicator to index, projects, and resume pages

--- a/projects.html
+++ b/projects.html
@@ -1012,6 +1012,11 @@
         <span class="theme-toggle-moon">🌙</span>
     </button>
 
+    <!-- Theme Status Indicator -->
+    <div id="theme-indicator" class="theme-indicator">
+        <span class="theme-indicator-text">Light Mode</span>
+    </div>
+    
     <!-- Back to Top Button -->
     <button id="back-to-top" class="back-to-top" aria-label="Back to top">
         <span>↑</span>
