--- a/projects.html
+++ b/projects.html
@@ -438,7 +438,7 @@
                     <a href="#" class="project-link secondary">
                         Live Demo (Coming Soon)
                     </a>
-                    <a href="#" class="project-link secondary">
+                    <a href="https://github.com/Tunchiie/Bungaku/blob/main/README.md" class="project-link secondary">
                         Project Insights
                     </a>
                 </div>
