feat: Update Open Graph and Twitter card titles to reflect machine learning expertise

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tunchiie.github.io/">
-    <meta property="og:title" content="Adetunji Fasiku - Data Analyst | Aspiring Data Scientist">
+    <meta property="og:title" content="Adetunji Fasiku - Data Analyst with Machine Learning Expertise">
     <meta property="og:description" content="Data Analyst with expertise in machine learning, risk modeling, and statistical analysis. Expert in Python, SQL, SHAP, and data visualization.">
     <meta property="og:image" content="https://tunchiie.github.io/assets/profile-preview.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://tunchiie.github.io/">
-    <meta property="twitter:title" content="Adetunji Fasiku - Data Analyst | Aspiring Data Scientist">
+    <meta property="twitter:title" content="Adetunji Fasiku - Data Analyst with Machine Learning Expertise">
     <meta property="twitter:description" content="Data Analyst with expertise in machine learning, risk modeling, and statistical analysis. Expert in Python, SQL, SHAP, and data visualization.">
     <meta property="twitter:image" content="https://tunchiie.github.io/assets/profile-preview.jpg">
     
