feat: Update project insights link to point to infographic image

--- a/projects.html
+++ b/projects.html
@@ -438,7 +438,7 @@
                     <a href="#" class="project-link secondary">
                         Live Demo (Coming Soon)
                     </a>
-                    <a href="images/what_makes_a_song_a_hit.pdf" target="_blank" class="project-link secondary">
+                    <a href="images/bungaku_infographic.png" target="_blank" class="project-link secondary">
                         Project Insights
                     </a>
                 </div>
