--- a/projects.html
+++ b/projects.html
@@ -439,6 +439,7 @@
                         Live Demo (Coming Soon)
                     </a>
                     <a href="images/bungaku_infographic.png" target="_blank" class="project-link secondary">
+                        <img src="images/bungaku_infographic.png" alt="Bungaku infographic: What Makes a Song a Hit" style="width:100%; max-width:900px; display:block; margin:auto;">
                         Project Insights
                     </a>
                 </div>
